Added loading ack msg

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,12 @@
     <select id="gender">
       <option value="Male">Male</option>
       <option value="Female">Female</option>
-      <option value="Other">Other</option>
+      <option value="Other">Others</option>
     </select>
     <select id="interested_in">
       <option value="Male">Interested in Male</option>
       <option value="Female">Interested in Female</option>
-      <option value="Other">Interested in Other</option>
+      <option value="Other">Interested in Others</option>
       <option value="Any">Interested in Any</option>
     </select>
     <button onclick="registerUser()">Connect</button>
