Optimized matchmaking logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Random Chat</title>
   <link rel="stylesheet" href="/static/styles.css">
-  <script src="/static/chat.js" defer></script>
+  <script src="/static/chat.js"></script>
 </head>
 <body>
   <div id="register">
